--- a/frontend/index.html
+++ b/frontend/index.html
@@ -68,7 +68,7 @@
             chatHistoryFull.push({ "role": "user", "content": question });
             displayChat();
 
-            fetch("http://localhost:8002/api/v2/stream", {
+            fetch("http://52.78.202.26:8002/api/v2/stream", {
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json"
@@ -136,7 +136,7 @@
         const formData = new FormData(form);
 
         try {
-            const response = await fetch('http://localhost:8002/receipt/add', {
+            const response = await fetch('http://52.78.202.26:8002/receipt/add', {
                 method: 'POST',
                 body: formData
             });
