--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,7 +67,7 @@
             chatHistory.push({ "role": "user", "content": question });
             chatHistoryFull.push({ "role": "user", "content": question });
             displayChat();
-            fetch("http://52.78.202.26:8002/invoke", {
+            fetch("http://localhost:8002/invoke", {
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json"
@@ -121,7 +121,7 @@
         const formData = new FormData(form);
 
         try {
-            const response = await fetch('http://52.78.202.26:8002/receipt/add', {
+            const response = await fetch('http://localhost:8002/receipt/add', {
                 method: 'POST',
                 body: formData
             });
